--- a/templates/health/index.html
+++ b/templates/health/index.html
@@ -23,6 +23,10 @@
     <link rel="stylesheet" href="{{ STATIC_URL }}/health/css/icomoon.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}/health/css/style.css">
 
+    <link rel="stylesheet" href="{{ STATIC_URL }}base/datatable/dataTables.bootstrap.min.css">
+
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -63,7 +67,7 @@
                 <li class="nav-item"><a href="#department-section" class="nav-link"><span>Department</span></a></li>
                 <li class="nav-item"><a href="#blog-section" class="nav-link"><span>Blog</span></a></li>
                 <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
-{#                <li class="nav-item"><a href="{% url 'client_report' %}" class="nav-link"><span>Report</span></a></li>#}
+                <li class="nav-item"><a href="#" data-toggle="modal" data-target="#clientDetails" class="nav-link"><span>Report</span></a></li>
             </ul>
         </div>
     </div>
@@ -85,6 +89,223 @@
         </div>
     </div>
 </section>
+
+<div class="modal fade" id="clientDetails" tabindex="-1" role="dialog" aria-labelledby="clientDetailsLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="clientDetailsLabel">Client Details</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="clientDetailsForm">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <input name="userID" class="form-control" type="text" placeholder="User ID" required="required">
+                    </div>
+                    <div class="form-group">
+                        <label for="dob">Date of Birth</label>
+                        <input name=dob class="form-control" type="text" id="datepicker" placeholder="MM/DD/YYYY" required="required">
+                    </div>
+                     <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Save changes</button>
+                        </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="healthModal" tabindex="-1" role="dialog" aria-labelledby="healthModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="healthModalLabel">Sunya Health Report</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+                <div class="panel panel-default">
+                    <div class="table-responsives">
+                        <div id="tbl" class="user_table form-inline">
+                            <div class="row">
+                                <div class="col-sm-12">
+
+                                    <input style="float: right" class="form-control" type="text" id="datepicker" placeholder="MM/DD/YYYY">
+
+                                    <table id="user_health" class="table table-striped table-bordered">
+
+                                        <tr role="row">
+                                            <th style="height: 100px; text-align: left;font-size: 38px">
+                                                SUNYA
+                                            </th>
+                                        </tr>
+                                        <tr role="row">
+                                            <td style="text-align: left">
+                                                <span style="font-size: 20px;font-weight: revert">Health Report</span> <br>
+                                                <span style="font-size: 16px;font-weight: revert; color: #cc1111">User Info</span>
+                                                <table class="d-user-info">
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">User ID</td>
+                                                        <td style="text-align: left" id="user_id">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Device ID</td>
+                                                        <td style="text-align: left" id="device_id">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">First Name</td>
+                                                        <td style="text-align: left" id="first_name">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Last Name</td>
+                                                        <td style="text-align: left" id="last_name">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Address</td>
+                                                        <td style="text-align: left" id="address">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Contact No.</td>
+                                                        <td style="text-align: left" id="contact_no">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Email</td>
+                                                        <td style="text-align: left" id="email">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Age</td>
+                                                        <td style="text-align: left" id="age">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Gender</td>
+                                                        <td style="text-align: left" id="gender">
+                                                    </tr>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                        <tr role="row">
+                                            <td style="text-align: left">
+                                                <span style="font-size: 16px;font-weight: revert; color: #cc1111">Vital Sign</span>
+                                                <table class="d-health-info">
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Weight (kg)</td>
+                                                        <td style="text-align: left" id="weight">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Height (Feet)</td>
+                                                        <td style="text-align: left" id="height">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Temperature</td>
+                                                        <td style="text-align: left" id="temperature">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Pulse</td>
+                                                        <td style="text-align: left" id="pulse">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">BP Systolic</td>
+                                                        <td style="text-align: left" id="bp_systolic">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">BP Diastolic</td>
+                                                        <td style="text-align: left" id="bp_diastolic">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Sto2</td>
+                                                        <td style="text-align: left" id="sto2">
+                                                    </tr>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                        <tr role="row">
+                                            <td style="text-align: left">
+                                                <span style="font-size: 16px;font-weight: revert; color: #cc1111">Blood Test</span>
+                                                <table class="d-health-info">
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Glucose</td>
+                                                        <td style="text-align: left" id="b_glucose">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Cholesterol</td>
+                                                        <td style="text-align: left" id="cholesterol">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Uric Acid</td>
+                                                        <td style="text-align: left" id="uric_acid">
+                                                    </tr>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                        <tr role="row">
+                                            <td style="text-align: left">
+                                                <span style="font-size: 16px;font-weight: revert; color: #cc1111">Urine Test</span>
+                                                <table class="d-health-info">
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Leukocytes</td>
+                                                        <td style="text-align: left" id="leukocytes">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Nitrate</td>
+                                                        <td style="text-align: left" id="nitrate">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Urobilinogen</td>
+                                                        <td style="text-align: left" id="urobilinogen">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Protein</td>
+                                                        <td style="text-align: left" id="protein">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Ph</td>
+                                                        <td style="text-align: left" id="ph">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Blood</td>
+                                                        <td style="text-align: left" id="blood">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Sp. Gravity</td>
+                                                        <td style="text-align: left" id="sp_gravity">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Ketone</td>
+                                                        <td style="text-align: left" id="ketone">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Bilirubin</td>
+                                                        <td style="text-align: left" id="bilirubin">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Glucose</td>
+                                                        <td style="text-align: left" id="u_glucose">
+                                                    </tr>
+                                                    <tr role="row" style="color: #0b2e13">
+                                                        <td style="text-align: left">Ascorbic acid</td>
+                                                        <td style="text-align: left" id="ascorbic_acid">
+                                                    </tr>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
 
 <section class="ftco-counter img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
     <div class="container">
@@ -560,13 +781,35 @@
 <script src="{{ STATIC_URL }}/health/js/aos.js"></script>
 <script src="{{ STATIC_URL }}/health/js/jquery.animateNumber.min.js"></script>
 <script src="{{ STATIC_URL }}/health/js/scrollax.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-<script src="{{ STATIC_URL }}/health/js/google-map.js"></script>
+
+{#<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>#}
+{#<script src="{{ STATIC_URL }}/health/js/google-map.js"></script>#}
 <script src="{{ STATIC_URL }}/health/js/main.js"></script>
 
-<link rel="stylesheet" href="{{ STATIC_URL }}base/datatable/dataTables.bootstrap.min.css">
 <script type="text/javascript" src="{{ STATIC_URL }}base/datatable/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}base/datatable/dataTables.bootstrap.min.js"></script>
+
+<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
+
+<script>
+    $(function() {
+        $("#datepicker").datepicker().on('change', function() {
+            // select on change
+            let date = $("#datepicker").datepicker("getDate");
+            console.log($.datepicker.formatDate("dd-mm-yy", date));
+        });
+    });
+
+{% comment %}    //trigger when form is submitted
+    $("#clientDetailsForm").submit(function(e){
+        e.preventDefault();
+        this.submit();
+        $('#healthModal').modal('show');
+    });{% endcomment %}
+
+</script>
 
 </body>
 </html>
